--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>扫雷</title>
 	<script src="js/jquery-1.2.3.js"></script>
 
 <style>
