--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>扫雷</title>
 	<script src="js/jquery-1.2.3.js"></script>
 
 <style>
@@ -107,12 +107,10 @@ body{
 </style>
 </head>
 <body>
-<<<<<<< HEAD
-	<h1>婷婷，你好</h1>
-=======
+
 	<div id='sy'><span style='color:red'>剩余的雷</span><input type="text" style='width:20px;'><span style='color:red'>颗</span></div>
 	<div class="saolei"></div>
->>>>>>> refs/remotes/origin/master
+
 </body>
 <script>
 
